# substance

./: Cargo.toml  LICENSE  README.md  llm.txt
.claude/: settings.local.json
.github/workflows/: main.yml
analysis-target/: Cargo.toml
analysis-target/src/: main.rs
examples/: analyze_binary.rs  analyze_cargo_build.rs  compare_builds.rs  full.rs  simple.rs  simple_analysis.rs
src/: analysis_ext.rs  cargo.rs  crate_name.rs  env.rs  errors.rs  formatting.rs  lib.rs  llvm_ir.rs  main.rs  object.rs  reporting.rs  types.rs
