[package]
name = "substance"
version = "0.1.0"
description = "Analyze the size composition of binaries by examining symbols and mapping them to crates."
categories = ["development-tools", "parsing"]
repository = "https://github.com/fasterthanlime/substance"
readme = "README.md"
license = "MIT"
edition = "2018"

[lib]
name = "substance"
path = "src/lib.rs"

[[example]]
name = "analyze_binary"
path = "examples/analyze_binary.rs"

[[example]]
name = "simple_analysis"
path = "examples/simple_analysis.rs"

[profile.release]
strip = "debuginfo"
lto = "thin"

[dependencies]
# Core library dependencies
json = "0.12"
memmap2 = "0.9"
multimap = { version = "0.10", default-features = false }
binfarce = "0.2.1"
pdb = "0.8.0"
