[package]
name = "substance"
version = "0.7.1"
description = "Analyze the size composition of binaries by examining symbols and mapping them to crates."
categories = ["development-tools", "parsing"]
repository = "https://github.com/fasterthanlime/substance"
readme = "README.md"
license = "MIT"
edition = "2018"

[lib]
name = "substance"
path = "src/lib.rs"

[profile.release]
strip = "debuginfo"
lto = "thin"

[features]
default = ["formatting"]
formatting = []
markdown = []
cli = [ "indicatif"]

[dependencies]
# Core library dependencies
facet = "0.27"
facet-json = "0.24"
memmap2 = "0.9"
multimap = { version = "0.10", default-features = false }
binfarce = "0.2.1"
pdb = "0.8.0"
log = "0.4"
aliri_braid = "0.4"
strong-type = "0.7"
indicatif = { version = "0.17", optional = true }
rayon = "1.10.0"
camino = "1.1"
thiserror = "2.0.12"
eyre = "0.6.12"
ignore = "0.4.23"
tempfile = "3.20.0"
owo-colors = "4"

[dev-dependencies]
camino = "1.1"
env_logger = "0.11.8"
itertools = "0.14.0"
owo-colors = "4"
